@@ -33,7 +33,7 @@ $EM_CONF[$_EXTKEY] = array(
 	'constraints' => array(
 		'depends' => array(
 			'typo3' => '4.5.0-4.7.99',
-			'tesseract' => '1.3.0-0.0.0',
+			'tesseract' => '1.7.0-0.0.0',
 		),
 		'conflicts' => array(
 		),
